# executor

./: Makefile.am  README.md  compilation.sh  configure.ac  execution.cpp
includes/: executor.h
src/: Makefile.am  executor.cpp  executor.h  test.cpp  work.h
src/tests/: Makefile.am  test.cpp
